--- a/inventory.yml
+++ b/inventory.yml
@@ -1,17 +1,15 @@
 ---
 all:
   hosts:
-    pi-cluster-01:
-      ansible_host: pi-cluster-01.local
-    pi-cluster-02:
-      ansible_host: pi-cluster-02.local
+    pi-cluster-01.local:
+    pi-cluster-02.local:
   children:
     raspberry_pi:
       hosts:
-        pi-cluster-01: {}
-        pi-cluster-02: {}
-    monitoring_servers:
+        pi-cluster-01.local: {}
+        pi-cluster-02.local: {}
+    monitors:
       hosts:
-        pi-cluster-01: {}
+        pi-cluster-01.local: {}
   vars:
     ansible_python_interpreter: /usr/bin/python3
