--- a/site.yml
+++ b/site.yml
@@ -5,6 +5,11 @@
     - common
     - prometheus.prometheus.node_exporter
 
+- hosts: rpi
+  name: Raspberry pi exporter
+  roles:
+    - rpi_exporter
+
 - hosts: monitors
   roles:
     - monitor
@@ -13,11 +18,49 @@
       node:
         - targets: >-
             {{
-              groups['all']
+              groups['rpi']
               | map('extract', hostvars)
-              | map(attribute='inventory_hostname')
+              | map(attribute='ansible_host')
               | map('regex_replace', '$', ':9100')
               | list
             }}
           labels:
+            # job: rpi
             env: pi-cluster
+
+        - targets: >-
+            {{
+              groups['monitors']
+              | map('extract', hostvars)
+              | map(attribute='ansible_host')
+              | map('regex_replace', '$', ':9243')
+              | list
+            }}
+          labels:
+            # job: node
+            env: pi-cluster
+  # vars:
+  #   prometheus_targets:
+  #     node:
+  #       - targets: >-
+  #           {{
+  #             groups['all']
+  #             | map('extract', hostvars)
+  #             | map(attribute='inventory_hostname')
+  #             | map('regex_replace', '$', ':9100')
+  #             | list
+  #           }}
+  #         labels:
+  #           env: all
+
+  #       - targets: >-
+  #           {{
+  #             groups['rpi']
+  #             | map('extract', hostvars)
+  #             | map(attribute='inventory_hostname')
+  #             | map('regex_replace', '$', ':9243')
+  #             | list
+  #           }}
+  #         labels:
+  #           job: node
+  #           env: pi-cluster
